--- a/index.html
+++ b/index.html
@@ -134,10 +134,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <i class="fa fa-facebook-official w3-hover-opacity"></i>
   <i class="fa fa-instagram w3-hover-opacity">ytttam</i>
   <i class="fa fa-snapchat w3-hover-opacity">Rolyatwehttam</i>
+  <a class="btn btn-social" title="Instagram" target="_blank" href="https://instagram.com/mobirise/"><i class="socicon socicon-instagram"></i></a>
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
   <i class="fa fa-twitter w3-hover-opacity"></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p>Powered by <a href="https://www.Github.com" target="_blank">Github</a></p>
+  <p>Powered by <a href="https://www.github.com" target="_blank">Github</a></p>
 </footer>
 
 </body>
