--- a/index.html
+++ b/index.html
@@ -102,20 +102,19 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Belfast Met</b></h5>
+          <h5 class="w3-opacity"><b><a href="https://www.belfastmet.ac.uk/" target="_self" rel="nofollow">Belfast Met</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2015</h6>
           <p>Web Development! All I need to know in one place</p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Nendrum College</b></h5>
+          <h5 class="w3-opacity"><b><a href="https://www.nendrumcollege.co.uk/" target="_self" rel="nofollow">Nendrum College</a></a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2015</h6>
           <p>Master Degree</p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b><a href="https://www.abbeyprimary.net/" target="_self" rel="nofollow">Abbey Primary School</a>
-            </b></h5>
+          <h5 class="w3-opacity"><b><a href="https://www.abbeyprimary.net/" target="_self" rel="nofollow">Abbey Primary School</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2013</h6>
           <p>Bachelor Degree</p><br>
         </div>
