--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
-          <p>Adobe Photoshop</p>
+          <p>Problem Solving</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
           </div>
-          <p>Photography</p>
+          <p>Team Work</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">
               <div class="w3-center w3-text-white">80%</div>
             </div>
           </div>
-          <p>Illustrator</p>
+          <p>Flexibility</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:75%">75%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
           </div>
           <p>Media</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
@@ -56,15 +56,15 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <br>
 
           <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
-          <p>English</p>
+          <p>HTML</p>
           <div class="w3-light-grey w3-round-xlarge">
             <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
           </div>
-          <p>Spanish</p>
+          <p>CSS</p>
           <div class="w3-light-grey w3-round-xlarge">
             <div class="w3-round-xlarge w3-teal" style="height:24px;width:55%"></div>
           </div>
-          <p>German</p>
+          <p>JAVA</p>
           <div class="w3-light-grey w3-round-xlarge">
             <div class="w3-round-xlarge w3-teal" style="height:24px;width:25%"></div>
           </div>
@@ -83,19 +83,19 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>McDonalds Bangor</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - <span class="w3-tag w3-teal w3-round">Jun 2020</span></h6>
-          <p>delivery team boi</p>
+          <p>I was part of the delivery team here</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>KFC Connswater</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2019 - Jan 2020</h6>
-          <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+          <p>I worked Crazy hours here</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>KFC Newtownards</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2018 - Feb 2019</h6>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p><br>
+          <p>I Worked Here For A Few Months I Was Hardly Given Shifts And Ended Up Leaving After A Short Time</p><br>
         </div>
       </div>
 
@@ -104,19 +104,19 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b><a href="https://www.belfastmet.ac.uk/" target="_self" rel="nofollow">Belfast Met</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2017 - 2019</h6>
-          <p>I went to belfast met in catsle reagh and studied cyvber security</p>
+          <p>I went to Belfast Met in Castlereagh and studied Cyber Security for 2 Years</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b><a href="https://www.nendrumcollege.co.uk/" target="_self" rel="nofollow">Nendrum College</a></a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2012 - 2017</h6>
-          <p>Master Degree</p>
+          <p>I Completed My GCSES Here</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b><a href="https://www.abbeyprimary.net/" target="_self" rel="nofollow">Abbey Primary School</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2004 - 2011</h6>
-          <p>Bachelor Degree</p><br>
+          <p>My Primary School</p><br>
         </div>
       </div>
 
