--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b><a href="https://www.nendrumcollege.co.uk/" target="_self" rel="nofollow">Nendrum College</a></a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2012 - 2017</h6>
-          <p>I Completed My GCSES Here</p>
+          <p>I Completed My GCSES Here so idid</p>
           <hr>
         </div>
         <div class="w3-container">
