--- a/index.html
+++ b/index.html
@@ -83,19 +83,19 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>McDonalds Bangor</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - <span class="w3-tag w3-teal w3-round">Jun 2020</span></h6>
-          <p>I was part of the delivery team here</p>
+          <p>I was part of the delivery team here I worked with the delivery manager to unpack the deliveries and sort them into the store rooms, Fridges and Freezers in this job there was alot of organization and team work to get everything sorted</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>KFC Connswater</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2019 - Jan 2020</h6>
-          <p>I worked Crazy hours here</p>
+          <p>I Worked a lot of hours here and did a lot of covering shifts and coming in to help out I did loads of customer service work being on tills taking orders teaching new staff how to use the tills but mostly I did drive thru I also prepared food and cooked food and worked effectively in a team helping and teaching new staff</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>KFC Newtownards</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2018 - Feb 2019</h6>
-          <p>I Worked Here For A Few Months I Was Hardly Given Shifts And Ended Up Leaving After A Short Time</p><br>
+          <p>I worked here a few months i did a lot of customer service work being on tills taking orders and also drive thru I also prepared food and worked effectively in a team I ended up leaving due to a lack of shifts</p><br>
         </div>
       </div>
 
@@ -104,13 +104,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b><a href="https://www.belfastmet.ac.uk/" target="_self" rel="nofollow">Belfast Met</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2017 - 2019</h6>
-          <p>I went to Belfast Met in Castlereagh and studied Cyber Security for 2 Years</p>
+          <p>I am currently here studying in a Cybersecurity course and would hope to finish this 2 year course and move onto a higher level Cyber security course and proceed learning about Cyber security</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b><a href="https://www.nendrumcollege.co.uk/" target="_self" rel="nofollow">Nendrum College</a></a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2012 - 2017</h6>
-          <p>I Completed My GCSES Here</p>
+          <p>I spent 5 years here getting GCSE qualifications that would help me pursue a career in computers and help me to progress to college to study in a computer related course</p>
           <hr>
         </div>
         <div class="w3-container">
