--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>KFC Connswater</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2019 - Jan 2020</h6>
-          <p>I Worked a lot of hours here and did a lot of covering shifts and coming in to help out I did loads of customer service work being on tills taking orders teaching new staff how to use the tills but mostly I did drive thru I also prepared food and cooked food and worked effectively in a team helping and teaching new staff</p>
+          <p>I was part of the delivery team, I would take charge of the fresh food and sundries checking that the orders matched the orders and informing the manager of any discrepancies. 
+I would store the the food in compliance with McDonalds food safety policy which included checking the temperatures. I also maintained health and safety in the stock taking areas. I had meetings with the manger on ideas on how to improve evicency and was proud that several items were adopted. I loved working as part of a team.</p>
           <hr>
         </div>
         <div class="w3-container">
