--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>McDonalds Bangor</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - <span class="w3-tag w3-teal w3-round">Jun 2020</span></h6>
-          <p>I was part of the delivery team here I worked with the delivery manager to unpack the deliveries and sort them into the store rooms, Fridges and Freezers in this job there was alot of organization and team work to get everything sorted</p>
+          <p>I was part of the delivery team, I would take charge of the fresh food and sundries checking that the orders matched the orders and informing the manager of any discrepancies. 
+I would store the the food in compliance with McDonalds food safety policy which included checking the temperatures. I also maintained health and safety in the stock taking areas. I had meetings with the manger on ideas on how to improve evicency and was proud that several items were adopted. I loved working as part of a team.</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>KFC Connswater</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2019 - Jan 2020</h6>
-          <p>I was part of the delivery team, I would take charge of the fresh food and sundries checking that the orders matched the orders and informing the manager of any discrepancies. 
-I would store the the food in compliance with McDonalds food safety policy which included checking the temperatures. I also maintained health and safety in the stock taking areas. I had meetings with the manger on ideas on how to improve evicency and was proud that several items were adopted. I loved working as part of a team.</p>
+          <p>I worked front of house in a very busy store I took food orders from the front of house and the drive though, this continued to give me great experience of dealing with customers and providing a first class service to insure repeat business for the company. I also also completed KFCs food safety classes and food preparation courses allowing me to put my learning into practice in the store. I became very proficient in all aspects of the day to day running of the store. I would also help train new staff as and when required.</p>
           <hr>
         </div>
         <div class="w3-container">
