--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@ I would store the the food in compliance with McDonalds food safety policy which
         <div class="w3-container">
           <h5 class="w3-opacity"><b>KFC Newtownards</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2018 - Feb 2019</h6>
-          <p>I worked here a few months i did a lot of customer service work being on tills taking orders and also drive thru I also prepared food and worked effectively in a team I ended up leaving due to a lack of shifts</p><br>
+          <p>I only worked here a few months in a part time capacity, but enjoyed working as part of a team and learnt about customer service, I took food orders and learnt about food preparation.</p>
+         <br>
         </div>
       </div>
 
